# opero

./: .gitignore  BUILD_AND_RELEASE.md  CHANGELOG.md  CLEANUP.txt  IMPLEMENTATION_SUMMARY.md  LOG.md  PLAN.md  PROGRESS.md  README.md  REPO_CONTENT.txt  TODO.md  TODO_DETAILED.md  WORK.md  cleanup.py  llms.txt  mkdocs.yml  pyproject.toml  run_tests.py  setup.py  twat_search.txt
.cursor/rules/: 0project.mdc  filetree.mdc
.github/workflows/: ci.yml  push.yml  release.yml
.specstory/history/: 2025-03-04_03-16-comprehensive-plan-for-opero-package-implementation.md  2025-03-04_05-40-cleanup-analysis-and-todo-update.md  2025-03-04_06-07-implementing-todo-md-phases-1-and-2.md  2025-03-04_07-28-implementing-todo-md-phases-1-and-2.md  2025-03-04_07-59-project-maintenance-and-documentation-update.md  2025-03-04_07-59-untitled.md  2025-03-04_08-40-managing-todo-list-tasks.md  2025-03-05_12-35-improving-opero-api-with-new-decorators.md  2025-03-05_13-36-repository-analysis-and-todo-update.md  2025-03-05_14-22-implementing-todo-md-for-opero-library.md
_github/: README.md
_github/workflows/: docs.yml  push.yml  release.yml
examples/: basic_usage.py
scripts/: build.py  dev.py  release.py  test.py
src/opero/: __init__.py  _version.py  concurrency.py  core.py  decorators.py  exceptions.py  exceptions_v2.py  opero.py  rate_limit.py  retry.py  utils.py  version.py
src/opero/concurrency/: __init__.py  pool.py
src/opero/core/: __init__.py  cache.py  fallback.py  rate_limit.py  retry.py
src/opero/decorators/: __init__.py  opero.py  operomap.py  opmap.py
src/opero/utils/: __init__.py  async_utils.py  correlation.py  logging.py
src_docs/: index.md  mkdocs.yml
src_docs/api/: core.md  overview.md  utils.md
src_docs/development/: changelog.md  contributing.md  testing.md
src_docs/getting-started/: configuration.md  installation.md  quickstart.md
src_docs/guide/: advanced-features.md  basic-usage.md  best-practices.md
src_docs/md/: index.md
src_docs/md/api/: core.md  overview.md  utils.md
src_docs/md/getting-started/: configuration.md  installation.md  quickstart.md
src_docs/md/guide/: advanced-features.md  basic-usage.md  best-practices.md
tests/: test_benchmark.py  test_core.py  test_decorators.py  test_edge_cases.py  test_integration.py  test_package.py
